# finance-dashboard

./: .env.dist  .gitignore  .pre-commit-config.yaml  FINAL_SOLUTION_SUMMARY.py  README.md  main.py  pyproject.toml  template.py  test_summary.py
.github/: dependabot.yml
examples/: README.md  pipeline-full.yml  pipeline-simple.yml
source/bank/: bunq_api.py
source/stock/: degiro_api.py
src/: main.py  run.py  template.py
src/connector/: __init__.py  bigquery.py  connector.py
src/finance_dashboard/: __main__.py  config.py  exceptions.py  main.py  pipeline_config.py
src/finance_dashboard/connector/: __init__.py  bigquery.py
src/finance_dashboard/logger/: __init__.py  debug.py  telegram.py
src/finance_dashboard/model/bank/: bunq.py
src/finance_dashboard/model/crypto/: __init__.py  coinbase.py  cosmos.py  web3.py
src/finance_dashboard/model/stock/: degiro.py
src/finance_dashboard/repository/: __init__.py
src/finance_dashboard/repository/bank/: bunq_repository.py
src/finance_dashboard/repository/crypto/: coinbase_repository.py  cosmos_repository.py  web3_repository.py
src/finance_dashboard/repository/stock/: degiro_repository.py
src/finance_dashboard/schema/: __init__.py
src/logger/: __init__.py  telegram.py
src/model/: bank.py  crypto.py  stock.py
src/model/bank/: bunq.py
src/model/crypto/: __init__.py  coinbase.py  cosmos.py  web3.py
src/model/stock/: degiro.py
src/repository/: __init__.py  bank.py  crypto.py  stock.py
src/repository/bank/: bunq_repository.py
src/repository/crypto/: coinbase_repository.py  cosmos_repository.py  web3_repository.py
src/repository/stock/: degiro_repository.py
src/schema/: __init__.py
