[tool.poetry]
name = "finance-dashboard"
version = "0.1.1"
description = ""
authors = ["thomastunc <thomastunc@hotmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
bunq-sdk = "^1.28.0"
python-dotenv = "^1.1.0"
google-cloud-bigquery = "^3.33.0"
pandas-gbq = "^0.29.0"
google-auth = "^2.40.2"
bs4 = "^0.0.2"
currencyconverter = "^0.18.6"
moralis = "^0.1.49"
degiro-connector = "^3.0.28"
protobuf = "^6.31.1"
coinbase-advanced-py = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
