[project]
name = "finance-dashboard"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "bunq-sdk>=1.28.0",
    "python-dotenv>=1.1.1",
    "google-cloud-bigquery>=3.38.0",
    "pandas-gbq>=0.29.2",
    "google-auth>=2.40.3",
    "bs4>=0.0.2",
    "currencyconverter>=0.18.10",
    "moralis>=0.1.49",
    "degiro-connector>=3.0.34",
    "protobuf>=6.32.1",
    "coinbase-advanced-py>=1.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_dashboard"]

[tool.uv]
package = true
